--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,13 @@ spring:
 #    password:
 #    driver-class-name: org.h2.Driver
 
+  zipkin:
+    base-url: http://127.0.0.1:9411
+    enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -45,5 +52,5 @@ management:
         include: beans, health, busrefresh, refresh
 
 kafka:
-  host: 10.10.10.203
+  host: 127.0.0.1
   port: 9092
